--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@
 body {
 	background: #FF0083;
 	font-family: Arial, Helvetica, sans-serif;
-	color: #333;
+	color: #ffffff;
 	line-height: 1.6;
 }
 
@@ -19,7 +19,7 @@ body {
 }
 
 h1 {
-	color: #777;
+	color: #ffffff;
 	margin-top: 15px;
 }
 
@@ -61,7 +61,7 @@ textarea {
 .btn {
 	display: block;
 	width: 100%;
-	background: #333;
+	background: #ffffff;
 	color: #fff;
 	padding: 10px 20px;
 	border: none;
