--- a/templates/index.html
+++ b/templates/index.html
@@ -16,15 +16,7 @@
       {% endif %}
       <form action="/submit" method="POST">
         <div class="form-group">
-          <h3 style="color: #ffffff;">What's your name?</h3>
-          <input
-            type="text"
-            name="customer"
-            placeholder=""
-          />
-        </div>
-        <div class="form-group">
-          <h3 style="color: #ffffff;">State</h3>
+          <h3 style="color: #ffffff;">Please select your state</h3>
           <select name="state">
             <option value="">Select State</option>
             <option value="">AR</option>
@@ -51,6 +43,30 @@
           </select>
         </div>
         <div class="form-group">
+          <h3 style="color: #ffffff;">Can you provide your postal code?</h3>
+          <input
+            type="text"
+            name="postcode"
+            placeholder=""
+          />
+        </div>
+        <div class="form-group">
+          <h3 style="color: #ffffff;">Please provide your form code (ho3, ho4 or ho6)</h3>
+          <input
+            type="text"
+            name="form"
+            placeholder=""
+          />
+        </div>
+        <div class="form-group">
+          <h3 style="color: #ffffff;">Aaaand... What's your age?</h3>
+          <input
+            type="text"
+            name="age"
+            placeholder=""
+          />
+        </div>
+        <div class="form-group">
           <h3 style="color: #ffffff;">How many policies you own from Lemonade?</h3>
           <input type="radio" name="policies" value="1" /> 1
           <input type="radio" name="policies" value="2" /> 2
@@ -59,6 +75,20 @@
           <input type="radio" name="policies" value="5" /> 5
           <input type="radio" name="policies" value="6" /> 6
           <input type="radio" name="policies" value="7" checked /> 7
+        </div>
+        <div class="form-group">
+          <h3 style="color: #ffffff;">And what's your coast type?</h3>
+          <input type="radio" name="coast" value="0" /> 0
+          <input type="radio" name="coast" value="1" /> 1
+          <input type="radio" name="coast" value="2" /> 2
+          <input type="radio" name="coast" value="3" /> 3
+          <input type="radio" name="coast" value="4" /> 4
+          <input type="radio" name="coast" value="5" /> 5
+          <input type="radio" name="coast" value="10" /> 10
+          <input type="radio" name="coast" value="15" /> 15
+          <input type="radio" name="coast" value="20" /> 20
+          <input type="radio" name="coast" value="25" /> 25
+          <input type="radio" name="coast" value="30" checked /> 30
         </div>
         <input type="submit" value="Submit" class="btn" />
       </form>
