--- a/templates/index.html
+++ b/templates/index.html
@@ -19,27 +19,27 @@
           <h3 style="color: #ffffff;">Please select your state</h3>
           <select name="state">
             <option value="">Select State</option>
-            <option value="">AR</option>
-            <option value="">AZ</option>
-            <option value="">CA</option>
-            <option value="">CT</option>
-            <option value="">DC</option>
-            <option value="">GA</option>
-            <option value="">IA</option>
-            <option value="">IL</option>
-            <option value="">IN</option>
-            <option value="">MD</option>
-            <option value="">MI</option>
-            <option value="">NJ</option>
-            <option value="">NM</option>
-            <option value="">NV</option>
-            <option value="">NY</option>
-            <option value="">OH</option>
-            <option value="">OR</option>
-            <option value="">PA</option>
-            <option value="">RI</option>
-            <option value="">TX</option>
-            <option value="">WI</option>
+            <option value="AR">AR</option>
+            <option value="AZ">AZ</option>
+            <option value="CA">CA</option>
+            <option value="CT">CT</option>
+            <option value="DC">DC</option>
+            <option value="GA">GA</option>
+            <option value="IA">IA</option>
+            <option value="IL">IL</option>
+            <option value="IN">IN</option>
+            <option value="MD">MD</option>
+            <option value="MI">MI</option>
+            <option value="NJ">NJ</option>
+            <option value="NM">NM</option>
+            <option value="NV">NV</option>
+            <option value="NY">NY</option>
+            <option value="OH">OH</option>
+            <option value="OR">OR</option>
+            <option value="PA">PA</option>
+            <option value="RI">RI</option>
+            <option value="TX">TX</option>
+            <option value="WI">WI</option>
           </select>
         </div>
         <div class="form-group">
