--- a/templates/index.html
+++ b/templates/index.html
@@ -51,12 +51,13 @@
           />
         </div>
         <div class="form-group">
-          <h3 style="color: #ffffff;">Please provide your form code (ho3, ho4 or ho6)</h3>
-          <input
-            type="text"
-            name="form"
-            placeholder=""
-          />
+          <h3 style="color: #ffffff;">Please select your form code :)</h3>
+          <select name="fire">
+            <option value="">Select</option>
+            <option value="ho3">ho3</option>
+            <option value="ho4">ho4</option>
+            <option value="ho6">ho6</option>
+          </select>
         </div>
         <div class="form-group">
           <h3 style="color: #ffffff;">Aaaand... What's your age?</h3>
@@ -69,6 +70,7 @@
         <div class="form-group">
           <h3 style="color: #ffffff;">Do you have fire alarm?</h3>
           <select name="fire">
+            <option value="">Select</option>
             <option value=True>Yes</option>
             <option value=False>No</option>
           </select>
@@ -76,6 +78,7 @@
         <div class="form-group">
           <h3 style="color: #ffffff;">Do you have burglar alarm?</h3>
           <select name="burglar">
+            <option value="">Select</option>
             <option value=True>Yes</option>
             <option value=False>No</option>
           </select>
@@ -83,6 +86,7 @@
         <div class="form-group">
           <h3 style="color: #ffffff;">Do you have portable electronics in your house?</h3>
           <select name="portable">
+            <option value="">Select</option>
             <option value=True>Yes</option>
             <option value=False>No</option>
           </select>
