--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="form-group">
           <h3 style="color: #ffffff;">Please select your form code :)</h3>
-          <select name="fire">
+          <select name="form">
             <option value="">Select</option>
             <option value="ho3">ho3</option>
             <option value="ho4">ho4</option>
@@ -71,8 +71,8 @@
           <h3 style="color: #ffffff;">Do you have fire alarm?</h3>
           <select name="fire">
             <option value="">Select</option>
-            <option value=True>Yes</option>
-            <option value=False>No</option>
+            <option value="True">Yes</option>
+            <option value="False">No</option>
           </select>
         </div>
         <div class="form-group">
