--- a/templates/index.html
+++ b/templates/index.html
@@ -54,9 +54,9 @@
           <h3 style="color: #ffffff;">Please select your form code :)</h3>
           <select name="form">
             <option value="">Select</option>
-            <option value="ho3">ho3</option>
-            <option value="ho4">ho4</option>
-            <option value="ho6">ho6</option>
+            <option value="ho3">Homeowners Insurance</option>
+            <option value="ho4">Renters Insurance</option>
+            <option value="ho6">Condo Insurance</option>
           </select>
         </div>
         <div class="form-group">
