--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
           <input type="radio" name="policies" value="7" checked /> 7
         </div>
         <div class="form-group">
-          <h3 style="color: #ffffff;">And what's your coast type?</h3>
+          <h3 style="color: #ffffff;">And how far are you from the coast (miles)?</h3>
           <input type="radio" name="coast" value="0" /> 0
           <input type="radio" name="coast" value="1" /> 1
           <input type="radio" name="coast" value="2" /> 2
