--- a/static/style.css
+++ b/static/style.css
@@ -62,7 +62,7 @@ textarea {
 	display: block;
 	width: 100%;
 	background: #ffffff;
-	color: #fff;
+	color: #000000;
 	padding: 10px 20px;
 	border: none;
 	cursor: pointer;
