--- a/static/style.css
+++ b/static/style.css
@@ -61,7 +61,7 @@ textarea {
 .btn {
 	display: block;
 	width: 100%;
-	background: #ffffff;
+	background: #000000;
 	color: #000000;
 	padding: 10px 20px;
 	border: none;
