--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
             <option value="Credit">Credit</option>
           </select>
         </div>
-        <input type="submit" value="Submit" class="btn" />
+        <input type="submit" value="Submit" class="btn" style="color: #000000;"/>
       </form>
     </div>
   </body>
