--- a/templates/index.html
+++ b/templates/index.html
@@ -130,8 +130,9 @@
           <h3 style="color: #ffffff;">Finally, please select your payment method</h3>
           <select name="payment">
             <option value="">Select Payment method</option>
-            <option value="Debit">Debit</option>
-            <option value="Credit">Credit</option>
+            <option value="debit">Debit</option>
+            <option value="credit">Credit</option>
+            <option value="prepaid">Pre-paid</option>
           </select>
         </div>
         <input type="submit" value="Submit" class="btn" style="color: #000000;"/>
