--- a/templates/index.html
+++ b/templates/index.html
@@ -71,8 +71,8 @@
           <h3 style="color: #ffffff;">Do you have fire alarm?</h3>
           <select name="fire">
             <option value="">Select</option>
-            <option value="True">Yes</option>
-            <option value="False">No</option>
+            <option value=True>Yes</option>
+            <option value=False>No</option>
           </select>
         </div>
         <div class="form-group">
