--- a/static/style.css
+++ b/static/style.css
@@ -61,8 +61,8 @@ textarea {
 .btn {
 	display: block;
 	width: 100%;
-	background: #000000;
-	color: #000000;
+	background: #ffffff;
+	color: #fff;
 	padding: 10px 20px;
 	border: none;
 	cursor: pointer;
