--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@
             <option value="prepaid">Pre-paid</option>
           </select>
         </div>
-        <input type="submit" value="Submit" class="btn" style="color: #000000;"/>
+        <input type="submit" value="Submit" class="btn" style="color: #FF0083;"/>
       </form>
     </div>
   </body>
