--- a/templates/index.html
+++ b/templates/index.html
@@ -93,28 +93,29 @@
         </div>
         <div class="form-group">
           <h3 style="color: #ffffff;">What's the fire proximity of your house?</h3>
-          <input type="radio" name="fire_prox" value="1" /> 1
+          <input type="radio" name="fire_prox" value="1" checked/> 1
           <input type="radio" name="fire_prox" value="2" /> 2
           <input type="radio" name="fire_prox" value="3" /> 3
           <input type="radio" name="fire_prox" value="4" /> 4
           <input type="radio" name="fire_prox" value="5" /> 5
           <input type="radio" name="fire_prox" value="6" /> 6
           <input type="radio" name="fire_prox" value="7" /> 7
-          <input type="radio" name="fire_prox" value="8" checked /> 8
+          <input type="radio" name="fire_prox" value="8" /> 8
         </div>
         <div class="form-group">
           <h3 style="color: #ffffff;">How many policies you own from Lemonade?</h3>
+          <input type="radio" name="policies" value="0" checked/> 0
           <input type="radio" name="policies" value="1" /> 1
           <input type="radio" name="policies" value="2" /> 2
           <input type="radio" name="policies" value="3" /> 3
           <input type="radio" name="policies" value="4" /> 4
           <input type="radio" name="policies" value="5" /> 5
           <input type="radio" name="policies" value="6" /> 6
-          <input type="radio" name="policies" value="7" checked /> 7
+          <input type="radio" name="policies" value="7" /> 7
         </div>
         <div class="form-group">
           <h3 style="color: #ffffff;">And how far are you from the coast (miles)?</h3>
-          <input type="radio" name="coast" value="0.0" /> 0
+          <input type="radio" name="coast" value="0.0" checked/> 0
           <input type="radio" name="coast" value="1.0" /> 1
           <input type="radio" name="coast" value="2.0" /> 2
           <input type="radio" name="coast" value="3.0" /> 3
@@ -124,7 +125,7 @@
           <input type="radio" name="coast" value="15.0" /> 15
           <input type="radio" name="coast" value="20.0" /> 20
           <input type="radio" name="coast" value="25.0" /> 25
-          <input type="radio" name="coast" value="30.0" checked /> 30
+          <input type="radio" name="coast" value="30.0" /> 30
         </div>
         <div class="form-group">
           <h3 style="color: #ffffff;">Finally, please select your payment method</h3>
